k8s/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: prod
spec:
  selector:
    app: user
  ports:
    - name: grpc
      protocol: TCP
      port: 3090
      targetPort: 3090
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: user-mysql-master-service
  namespace: prod
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: user-phpmyadmin-service
  namespace: prod
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 3080
      targetPort: 80
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: user-fluent-bit-service
  namespace: prod
spec:
  selector:
    app: user
  ports:
    - name: tcp
      protocol: TCP
      port: 24220
      targetPort: 24224
    - name: udp
      protocol: UDP
      port: 24220
      targetPort: 24224
  type: NodePort
